Fixed header alignment, list display in content and see also image sizing

--- a/Meldpuntongedierte/Meldpuntongedierte/Css/main.css
+++ b/Meldpuntongedierte/Meldpuntongedierte/Css/main.css
@@ -41,6 +41,12 @@ h2 {
   font-size: 140%;
 }
 
+h3 {
+  margin: 15px 0px 5px 0px;
+  font-weight: 600;
+  font-size: 120%;
+}
+
 @media only screen and (max-width:768px) {
   h1 {
     margin: 50px 0px 0px 0px;
@@ -50,8 +56,8 @@ h2 {
     font-size: 120%;
   }
 
-  .content .created-content h1:first-of-type {
-    margin-top: 20px;
+  .content article h1:first-child {
+    margin-top: 40px;
   }
 }
 
@@ -107,6 +113,7 @@ h2 {
   max-width: 1000px;
   position: relative;
   margin: 0px auto 0px auto;
+  padding: 0 20px;
   background-repeat: repeat-y;
   background-position: -1px 0px;
   line-height: 130%;
@@ -182,7 +189,7 @@ h2 {
   padding-top: 40px;
 }
 
-  .content > h1:first-of-type {
+  .content h1:first-of-type {
     margin-top: 20px;
   }
 
@@ -198,6 +205,12 @@ h2 {
 
   .content img {
     border-radius: 6px;
+  }
+
+  .content ul {
+    list-style-type: disc;
+    padding-left: 10px;
+    margin-left: 20px;
   }
 
 #header {
@@ -258,7 +271,7 @@ h2 {
 }
 
 .menu {
-  margin-top: 50px;
+  margin-top: 80px;
   margin-left: 30px;
   min-width: 250px;
   padding: 20px;
@@ -575,6 +588,6 @@ h3:hover {
     background-color: rgba(0, 0, 0, 0.4392156862745098);
   }
 
-  .page-tile .tile-text h2{
-    margin: 10px 0;
-  }
+    .page-tile .tile-text h2 {
+      margin: 10px 0;
+    }
