--- a/Meldpuntongedierte/Meldpuntongedierte/Css/mobile.css
+++ b/Meldpuntongedierte/Meldpuntongedierte/Css/mobile.css
@@ -99,10 +99,6 @@
     display: none;
   }
 
-  ul {
-    display: list-item;
-  }
-
   .main {
     padding: 10px 10px 0px 10px;
     overflow: hidden;
